# network_sniffer

./: .gitignore  README.md  docker-compose.yaml
actix/: Cargo.toml  Dockerfile  README.md
actix/src/: db.rs  env.rs  handlers.rs  lib.rs  main.rs  static_files.rs
actix/static/: styles.css  tarun.html
client/: Cargo.toml  Dockerfile
client/src/: env.rs  io_operations.rs  lib.rs  main.rs  packet_capture.rs  packet_metadata.rs
connection/: index.js  package-lock.json  tarun.html
project/: Cargo.toml  Dockerfile  database.sql
project/src/: database.rs  env.rs  lib.rs  main.rs  packet_metadata.rs  tcp_server.rs  tests.rs
