[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio-postgres = "0.7.8"
actix-files = "0.6.2"
serde = { version = "1.0.177", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }