[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-postgres = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"